--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
-
-
-
-zuul-ext:
-  redisEnable: false
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    pool:
+      max-active: 8
+      max-idle: 8
+      min-idle: 0
+      max-wait: 10000
