--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.marcosbarbero.cloud</groupId>
+      <artifactId>spring-cloud-zuul-ratelimit</artifactId>
+      <version>1.7.2.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
