RateLimit Load and Event
Signed-off-by: moumy <mmy29279@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>spring-cloud-zuul-ratelimit</artifactId>
       <version>1.7.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.22</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
